tests/cases/scc/error/0020-storage3.c

int
func4(static int par)
{
    static f;

	return f+par;
}


